This is my css file

--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@ Future applications are expected to bring about enormous changes, but AI is alre
                 <a href="#" class="fa fa-google"></a>
                 <a href="#" class="fa fa-linkedin"></a>
             </div>
+            
         </div>
     </footer>
 
@@ -346,6 +347,10 @@ Future applications are expected to bring about enormous changes, but AI is alre
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="add.js">
+    </script>
+
+<!-- Your HTML code -->
 
 </body>
 
